--- a/src/assets/css/order.css
+++ b/src/assets/css/order.css
@@ -68,31 +68,33 @@ button {
   align-items: center;
   gap: 10px;
   padding: 10px;
-  background-color: #f9f9f9;
-  border: 1px solid #ddd;
-  border-radius: 5px;
 }
 
 .filter-container input,
 .filter-container select {
-  padding: 5px;
+
   border: 1px solid #9d9d9d;
   border-radius: 5px;
   font-size: 20px;
 }
 
 .radio-group {
-  border: 1px solid #9d9d9d;
+  border: 2px solid #9d9d9d;
   display: flex;
   align-items: center;
   gap: 5px;
   font-size: 20px;
-  margin-top: 10px;
-  padding: 10px;
+  border-radius: 5px;
 }
 
 .radio-group .title {
   margin-right: 20px;
+}
+.radio-group .left {
+  background-color: #d9d9d9;
+  padding: 10px ;
+  width: 100px ;
+  justify-content: center;
 }
 
 .radio-group label {
@@ -144,6 +146,16 @@ button {
   width: 100%;
   font-size: 20px;
   border-left: 1px solid #000000;
+}
+.divvv3-title{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 40%;
+  font-size: 20px;
+  border-left: 1px solid #000000;
+  background-color: #d9d9d9;
 }
 
 .info {
