--- a/src/assets/css/order.css
+++ b/src/assets/css/order.css
@@ -28,12 +28,15 @@ th, td {
   cursor: pointer;
   font-size: 20px;
   font-weight: 500;
+
 }
 
 th {
   background-color: #f2f2f2;
   text-align: left;
 }
+
+
 
 thead {
   border-bottom: 2px solid black;
@@ -79,7 +82,7 @@ button {
 }
 
 .radio-group {
-  border: 2px solid #9d9d9d;
+  /* border: 2px solid #9d9d9d; */
   display: flex;
   align-items: center;
   gap: 5px;
@@ -270,4 +273,60 @@ button {
 
 .popup-content::-webkit-scrollbar {
   display: none;
+}
+
+
+
+.filter-section {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.filter-table {
+  border-collapse: collapse;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 10px;
+  width: 100%;
+  margin-top: 2%;
+}
+
+.filter-table td {
+  padding: 5px 10px;
+  padding: 15px ;
+}
+
+.filter-label {
+  font-weight: bold;
+  text-align: center;
+  width: 100px;
+  background-color: #D9D9D9;
+  border: 1px solid #ddd;
+  
+}
+
+.filter-input {
+  width: 500px;
+  text-align: left;
+  border: 1px solid lightgray;
+  border-right: none;
+}
+
+.action-buttons {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.reset-btn, .search-btn {
+  background-color: #fff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  /* cursor: pointer; */
+  padding: 8px 8px;
+  font-size: 14px;
+  margin: 0 5px;
 }
