--- a/src/assets/css/order.css
+++ b/src/assets/css/order.css
@@ -23,23 +23,27 @@ table {
 }
 
 th, td {
-  border: 1px solid #ddd;
-  padding: 8px;
+  /* border: 1px solid #ddd; */
+  padding: 20px;
   cursor: pointer;
   font-size: 20px;
   font-weight: 500;
-
 }
 
+td{
+  border-bottom: 1px solid #d9d9d9;
+  padding: 30px;
+}
 th {
-  background-color: #f2f2f2;
-  text-align: left;
+
+  /* text-align: left; */
 }
-
-
 
 thead {
-  border-bottom: 2px solid black;
+  /* border-bottom: 2px solid black; */
+  background-color: #d9d9d9;
+  border-radius: 5px;
+
 }
 
 .pagination {
@@ -137,6 +141,7 @@ button {
   background-color: white;
   height: 33.33333333%;
   width: 100%;
+  border-top: 1px solid #000000;
   border-right: 1px solid #000000;
   border-bottom: 1px solid #000000;
 }
@@ -330,3 +335,5 @@ button {
   font-size: 14px;
   margin: 0 5px;
 }
+
+ 
