--- a/src/assets/css/order.css
+++ b/src/assets/css/order.css
@@ -23,7 +23,7 @@ table {
 }
 
 th, td {
-  /* border: 1px solid #ddd; */
+  border: 1px solid black;
   padding: 20px;
   cursor: pointer;
   font-size: 20px;
@@ -40,7 +40,7 @@ th {
 }
 
 thead {
-  /* border-bottom: 2px solid black; */
+  border-bottom: 2px solid black;
   background-color: #d9d9d9;
   border-radius: 5px;
 
