--- a/src/assets/css/order.css
+++ b/src/assets/css/order.css
@@ -29,12 +29,13 @@ th, td {
   font-weight: 500;
 }
 th{
-  font-size: 12px;
+  font-weight: bold;
+  font-size: 14px;
 }
 td{
   border-bottom: 1px solid #d9d9d9;
   padding: 30px;
-  font-size: 10px;
+  font-size: 14px;
 }
 
 
@@ -78,10 +79,9 @@ button {
 
 .filter-container input,
 .filter-container select {
-
   border: 1px solid #9d9d9d;
   border-radius: 5px;
-  font-size: 12px;
+  font-size: 16px;
 }
 
 .radio-group {
@@ -89,7 +89,7 @@ button {
   display: flex;
   align-items: center;
   gap: 5px;
-  font-size: 8px;
+  font-size: 16px;
   border-radius: 5px;
 }
 
@@ -107,6 +107,7 @@ button {
   display: flex;
   align-items: center;
   gap: 3px;
+  font-size: 16px;
 }
 
 .divvv-title {
@@ -293,22 +294,20 @@ button {
   border: 1px solid #ddd;
   border-radius: 5px;
   padding: 10px;
-  width: 100%;
-  margin-top: 2%;
+  width: 1200px;
 }
 
 .filter-table td {
   padding: 5px 10px;
-  padding: 15px ;
 }
 
 .filter-label {
   font-weight: bold;
   text-align: center;
+  font-size: 16px;
   width: 100px;
   background-color: #D9D9D9;
   border: 1px solid #ddd;
-  
 }
 
 .filter-input {
