--- a/src/assets/css/order.css
+++ b/src/assets/css/order.css
@@ -200,13 +200,15 @@ button {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 999;
+  backface-visibility: hidden;
+  transform: translateZ(0);
+  -webkit-font-smoothing: subpixel-antialiased;
 }
 
 .popup-content {
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 10%;
+  left: 10%;
   background-color: #f5f5f5;
   padding: 20px;
   border-radius: 30px;
@@ -216,6 +218,7 @@ button {
   height: 80%;
   overflow-y: auto;
   max-height: 80vh;
+  transform: translateZ(0);
 }
 
 .popup-content h2 {
@@ -394,3 +397,5 @@ button {
 .condition-button.inspection-completed {
   background-color: #45a049; /* Color for 검수완료 */
 }
+
+
