--- a/src/assets/css/order.css
+++ b/src/assets/css/order.css
@@ -1,110 +1,3 @@
-.table-wrapper,
-.table-wrapper2 {
-  width: 95%;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-}
-
-.table-wrapper {
-  max-height: 500px;
-  min-height: 500px;
-  overflow-y: auto;
-}
-
-.table-wrapper2 {
-  max-height: 500px;
-  min-height: 500px;
-  overflow-y: auto;
-}
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-th, td {
-  border: 1px solid black;
-  padding: 20px;
-  cursor: pointer;
-  font-weight: 500;
-}
-th{
-  font-weight: bold;
-  font-size: 14px;
-}
-td{
-  border-bottom: 1px solid #d9d9d9;
-  padding: 30px;
-  font-size: 14px;
-}
-
-
-thead {
-  border-bottom: 2px solid black;
-  background-color: #d9d9d9;
-  border-radius: 5px;
-
-}
-
-.pagination {
-  margin-top: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.pagination button{
-  padding: 5px 10px;
-  background-color: white;
-  border-radius: 5px;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-.pagination button:hover{
-  padding: 5px 10px;
-  background-color: rgb(101, 101, 101);
-  border-radius: 5px;
-  font-size: 16px;
-  cursor: pointer;
-}
-.pagination button:active{
-  padding: 5px 10px;
-  background-color: black;
-  border-radius: 5px;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-button {
-  margin: 0 5px;
-  padding: 5px 10px;
-  cursor: pointer;
-}
-
-.highlighted {
-  background-color: #9d9d9d;
-}
-
-.create-button {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  width: 100px;
-  height: 50px;
-  background-color: #d9d9d9;
-}
-
-.filter-container {
-  align-items: center;
-  gap: 10px;
-  padding: 10px;
-}
-
-.filter-container input,
-.filter-container select {
-  border: 1px solid #9d9d9d;
-  border-radius: 5px;
-  font-size: 16px;
-}
 
 .radio-group {
   /* border: 2px solid #9d9d9d; */
@@ -131,244 +24,6 @@ button {
   gap: 3px;
   font-size: 16px;
 }
-
-.divvv-title {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #d9d9d9;
-  height: 100%;
-  width: 99.9%;
-  font-size: 1lh;
-  font-weight: 1000;
-  border: 1px solid #000000;
-  padding-top: 5px;
-  padding-bottom: 5px;
-}
-
-.divvv {
-  display: block;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
-  height: 100%;
-  width: 50%;
-  border: 1px solid #000000;
-}
-
-.divvv2 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
-  height: 33.33333333%;
-  width: 100%;
-  border-top: 1px solid #000000;
-  border-right: 1px solid #000000;
-  border-bottom: 1px solid #000000;
-}
-
-.divvv3 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-  font-size: 20px;
-  border-left: 1px solid #000000;
-}
-.divvv3-title{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 40%;
-  font-size: 20px;
-  border-left: 1px solid #000000;
-  background-color: #d9d9d9;
-}
-
-.info {
-  border: 3px solid #000000;
-}
-
-.popup-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 999;
-  backface-visibility: hidden;
-  transform: translateZ(0);
-  -webkit-font-smoothing: subpixel-antialiased;
-}
-
-.popup-content {
-  position: fixed;
-  top: 10%;
-  left: 10%;
-  background-color: #f5f5f5;
-  padding: 20px;
-  border-radius: 30px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  width: 90%;
-  max-width: 2000px;
-  height: 80%;
-  overflow-y: auto;
-  max-height: 80vh;
-  transform: translateZ(0);
-}
-
-.popup-content h2 {
-  margin-bottom: 20px;
-}
-
-.popup-content .form-group {
-  margin-bottom: 20px;
-}
-
-.popup-content label {
-  font-weight: bold;
-}
-
-.popup-content input[type="text"],
-.popup-content textarea {
-  width: 100%;
-  padding: 10px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-  resize: none;
-  height: auto;
-}
-
-.popup-content button {
-  padding: 10px 20px;
-  background-color: #9d9d9d;
-  color: black;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.popup-content button:hover {
-  background-color: #45a049;
-}
-/* 
-.img {
-  height: 90%;
-  width: 90%;
-  bv
-}
-
-
-
-.imgForm {
-  background-color: #b7b7b7;
-  height: 300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 30px;
-  padding: 1px 15px 15px;
-  margin: 10px;
-} */
-
-.but-group {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.but {
-  margin: 20px;
-  padding: 10px;
-  border-radius: 10px;
-  border: 1px solid #d9d9d9;
-  background-color: #d9d9d9;
-  color: #000000;
-  font-size: 30px;
-  font-weight: 600;
-  font-family: 'Inter', sans-serif;
-  width: 30%;
-}
-
-.but:hover {
-  background-color: #333333;
-}
-
-.but.active {
-  background-color: #fedb56;
-  border-color: #fedb56;
-}
-
-.popup-content::-webkit-scrollbar {
-  display: none;
-}
-
-
-
-.filter-section {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
-}
-
-.filter-table {
-  border-collapse: collapse;
-  background-color: #f9f9f9;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  padding: 10px;
-  width: 1200px;
-}
-
-.filter-table td {
-  padding: 5px 10px;
-}
-
-.filter-label {
-  font-weight: bold;
-  text-align: center;
-  font-size: 16px;
-  width: 100px;
-  background-color: #D9D9D9;
-  border: 1px solid #ddd;
-}
-
-.filter-input {
-  width: 500px;
-  text-align: left;
-  border: 1px solid lightgray;
-  border-right: none;
-}
-
-.action-buttons {
-  display: flex;
-  justify-content: center;
-  margin-top: 10px;
-}
-
-.reset-btn, .search-btn {
-  background-color: #fff;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  /* cursor: pointer; */
-
-  font-size: 14px;
-  margin: 0 5px;
-}
-
-
-.reset-btn img:hover, .search-btn img:hover{
-  filter: 
-      /* blur(2px)  */
-      brightness(1.2);
-}
-
 
 .condition-button {
   display: inline-block;
@@ -398,4 +53,187 @@ button {
   background-color: #45a049; /* Color for 검수완료 */
 }
 
+/* 여기부턴 재현님꺼 */
+  .container {
+    position: relative;
+    min-height: 100vh; /* Ensure the container takes at least the full height of the viewport */
+  }
+  
+  .filter-section {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  
+  .filter-table {
+    border-collapse: collapse;
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 10px;
+    width: 1300px;
+  }
+  
+  .filter-table td {
+    padding: 5px 10px;
+    font-size: 16px;
+    
+  }
+  
+  .filter-label {
+    font-weight: bold;
+    text-align: center;
+    width: 100px;
+    background-color: #D9D9D9;
+  }
+  
+  .filter-input {
+    width: 500px;
+    text-align: left;
+    border: 1px solid lightgray;
+  }
+  
+  .date-range span {
+    margin: 0 5px;
+  }
+  
+  .action-buttons {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
+  
+  .reset-btn, .search-btn {
+    background-color: #fff;
+    color: black;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    padding: 8px 8px;
+    font-size: 14px;
+    margin: 0 5px;
+  }
+  
+  .reset-btn:hover, .search-btn:hover {
+    background-color: #f0f0f0;
+  }
+  
+  .table-container {
+    width: 100%;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .table {
+    width: 1300px;
+    max-width: 1300px;
+    border-collapse: collapse;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-spacing: 0 10px;
+  }
+  
+  .table th {
+    font-weight: bold;
+    color: #000;
+    font-size: 16px;
+    text-align: center;
+  }
+  
+  .table th,td {
+    width: 50px;
+  }
+  
+  .table th:nth-child(5), .table td:nth-child(5) {
+    width: 100px; /* 원하는 너비로 설정 */
+  }
+  .highlighted {
+    background-color: #9d9d9d;
+  }
+  
+  td.boardname {
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+    width: 150px;
+  }
+  
+  .header1 {
+    background-color: #D9D9D9;
+    font-weight: bold;
+    height: 50px;
+    font-size: 12px;
+    text-align: center;
+  }
+  
+  .header1 .num {
+    width: 5%;
+  }
+  
+  .allpost {
+    text-align: center;
+    padding: 10px 0;
+  }
+  
+  .allpost .num {
+    width: 5%;
+  }
+  
+  .allpost td {
+    border-right: 1px solid #ddd;
+    font-size: 14px;
 
+  }
+  
+  .editbutton {
+    background-color: #ffcc00;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 5px;
+    color: #fff;
+    font-weight: bold;
+  }
+  
+  .editbutton-pending {
+    background-color: #ff6285;
+  }
+  
+  .editbutton:hover {
+    background-color: #ffbb00;
+  }
+  
+  .editbutton-pending:hover {
+    background-color: #ff6275;
+  }
+  
+  .pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+  }
+  
+  .pagination button {
+    background-color: #fff;
+    color: black;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    cursor: pointer;
+    padding: 8px 16px;
+    font-size: 14px;
+    margin: 0 5px;
+  }
+  
+  .pagination button:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+  }
+  
+  .pagination span {
+    margin: 0 10px;
+    font-weight: bold;
+  }
