design: change css, apply css in exchange
- 주문 페이지 css 변경

--- a/src/assets/css/order.css
+++ b/src/assets/css/order.css
@@ -58,13 +58,13 @@
     position: relative;
     min-height: 100vh; /* Ensure the container takes at least the full height of the viewport */
   }
-  
+
   .filter-section {
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
   }
-  
+
   .filter-table {
     border-collapse: collapse;
     background-color: #f9f9f9;
@@ -73,37 +73,37 @@
     padding: 10px;
     width: 1300px;
   }
-  
+
   .filter-table td {
     padding: 5px 10px;
     font-size: 16px;
-    
+
   }
-  
+
   .filter-label {
     font-weight: bold;
     text-align: center;
     width: 100px;
     background-color: #D9D9D9;
   }
-  
+
   .filter-input {
     width: 500px;
     text-align: left;
     border: 1px solid lightgray;
   }
-  
+
   .date-range span {
     margin: 0 5px;
   }
-  
+
   .action-buttons {
     display: flex;
     justify-content: center;
     margin-top: 10px;
     margin-bottom: 20px;
   }
-  
+
   .reset-btn, .search-btn {
     background-color: #fff;
     color: black;
@@ -114,18 +114,18 @@
     font-size: 14px;
     margin: 0 5px;
   }
-  
+
   .reset-btn:hover, .search-btn:hover {
     background-color: #f0f0f0;
   }
-  
+
   .table-container {
     width: 100%;
     margin-bottom: 10px;
     display: flex;
     justify-content: center;
   }
-  
+
   .table {
     width: 1300px;
     max-width: 1300px;
@@ -135,32 +135,32 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-spacing: 0 10px;
   }
-  
+
   .table th {
     font-weight: bold;
     color: #000;
     font-size: 16px;
     text-align: center;
   }
-  
+
   .table th,td {
     width: 50px;
   }
-  
+
   .table th:nth-child(5), .table td:nth-child(5) {
     width: 100px; /* 원하는 너비로 설정 */
   }
   .highlighted {
     background-color: #9d9d9d;
   }
-  
+
   td.boardname {
     text-decoration: none;
     color: black;
     cursor: pointer;
     width: 150px;
   }
-  
+
   .header1 {
     background-color: #D9D9D9;
     font-weight: bold;
@@ -168,26 +168,26 @@
     font-size: 12px;
     text-align: center;
   }
-  
+
   .header1 .num {
     width: 5%;
   }
-  
+
   .allpost {
     text-align: center;
     padding: 10px 0;
   }
-  
+
   .allpost .num {
     width: 5%;
   }
-  
+
   .allpost td {
     border-right: 1px solid #ddd;
     font-size: 14px;
 
   }
-  
+
   .editbutton {
     background-color: #ffcc00;
     border: none;
@@ -197,26 +197,26 @@
     color: #fff;
     font-weight: bold;
   }
-  
+
   .editbutton-pending {
     background-color: #ff6285;
   }
-  
+
   .editbutton:hover {
     background-color: #ffbb00;
   }
-  
+
   .editbutton-pending:hover {
     background-color: #ff6275;
   }
-  
+
   .pagination {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 10px;
   }
-  
+
   .pagination button {
     background-color: #fff;
     color: black;
@@ -227,13 +227,40 @@
     font-size: 14px;
     margin: 0 5px;
   }
-  
+
   .pagination button:disabled {
     cursor: not-allowed;
     opacity: 0.5;
   }
-  
+
   .pagination span {
     margin: 0 10px;
     font-weight: bold;
+  }
+
+
+  .breadcrumbs {
+    font-size: 16px;
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: left;
+    font-weight: bold;
+    padding: 10px;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .breadcrumbs span {
+    margin: 0 5px;
+  }
+
+  .breadcrumbs a {
+    color: #000;
+    text-decoration: none;
+    font-weight: bolder;
+  }
+
+  .breadcrumbs a:hover {
+    text-decoration: underline;
   }
