--- a/src/assets/css/Breadcrumb.css
+++ b/src/assets/css/Breadcrumb.css
@@ -1,25 +1,25 @@
-.breadcrumbs {
-  font-size: 16px;
-  margin-bottom: 15px;
-  display: flex;
-  justify-content: left;
-  font-weight: bold;
-  padding: 10px;
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-}
+/*.breadcrumbs {*/
+/*  font-size: 16px;*/
+/*  margin-bottom: 15px;*/
+/*  display: flex;*/
+/*  justify-content: left;*/
+/*  font-weight: bold;*/
+/*  padding: 10px;*/
+/*  width: 1200px;*/
+/*  margin-left: auto;*/
+/*  margin-right: auto;*/
+/*}*/
 
-.breadcrumbs span {
-  margin: 0 5px;
-}
+/*.breadcrumbs span {*/
+/*  margin: 0 5px;*/
+/*}*/
 
-.breadcrumbs a {
-  color: #000;
-  text-decoration: none;
-  font-weight: bolder;
-}
+/*.breadcrumbs a {*/
+/*  color: #000;*/
+/*  text-decoration: none;*/
+/*  font-weight: bolder;*/
+/*}*/
 
-.breadcrumbs a:hover {
-  text-decoration: underline;
-}
+/*.breadcrumbs a:hover {*/
+/*  text-decoration: underline;*/
+/*}*/
