--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -179,38 +179,51 @@
     background-color: white;
     height: 100%;
     width: 50%;
-    border: 1px solid #000000;
+    border-left: 1px solid #000000;
+    
   }
   
   .divvv2 {
     display: flex;
-    justify-content: center;
     align-items: center;
     background-color: white;
-    height: 33.33333333%;
+    width: 100%;
+    height: 30px;
+    border-top: 1px solid #000000;
+    border-right: 1px solid #000000;
+
+    gap: 10px;
+  }
+  
+  .divvv2-title{
+    display: flex;
+    align-items: center;
+    background-color: white;
     width: 100%;
     border-top: 1px solid #000000;
     border-right: 1px solid #000000;
     border-bottom: 1px solid #000000;
+    background-color: #d9d9d9;
+    
   }
-  
+
   .divvv3 {
     display: flex;
-    justify-content: center;
     align-items: center;
     height: 100%;
     width: 100%;
-    font-size: 20px;
-    border-left: 1px solid #000000;
+    font-size: 16px;
   }
   .divvv3-title{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
-    width: 40%;
-    font-size: 20px;
-    border-left: 1px solid #000000;
+    width: 120px;
+    min-width: 120px;
+    max-width: 120px;
+    font-size: 16px;
+
     background-color: #d9d9d9;
   }
   
@@ -218,3 +231,25 @@
     border: 3px solid #000000;
   }
   
+  .second-insert-input {
+    width: 100%;
+    border: 1px solid lightgray;
+    border-right: none;
+  }
+
+  .divvv4 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    font-size: 16px;
+    border-left: 1px solid #000000;
+  }
+  .textInput {
+    border: 1px solid rgba(217, 217, 217, 0.7);
+    border-radius: 5px;
+    min-width: 120px;
+    max-width: 100px;
+
+  }
