--- a/src/assets/css/order.css
+++ b/src/assets/css/order.css
@@ -1,57 +1,57 @@
 
-/*.radio-group {*/
-/*  !* border: 2px solid #9d9d9d; *!*/
-/*  display: flex;*/
-/*  align-items: center;*/
-/*  gap: 5px;*/
-/*  font-size: 16px;*/
-/*  border-radius: 5px;*/
-/*}*/
+.radio-group {
+  /* border: 2px solid #9d9d9d; */
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-size: 16px;
+  border-radius: 5px;
+}
 
-/*.radio-group .title {*/
-/*  margin-right: 20px;*/
-/*}*/
-/*.radio-group .left {*/
-/*  background-color: #d9d9d9;*/
-/*  padding: 10px ;*/
-/*  width: 100px ;*/
-/*  justify-content: center;*/
-/*}*/
+.radio-group .title {
+  margin-right: 20px;
+}
+.radio-group .left {
+  background-color: #d9d9d9;
+  padding: 10px ;
+  width: 100px ;
+  justify-content: center;
+}
 
-/*.radio-group label {*/
-/*  display: flex;*/
-/*  align-items: center;*/
-/*  gap: 3px;*/
-/*  font-size: 16px;*/
-/*}*/
+.radio-group label {
+  display: flex;
+  align-items: center;
+  gap: 3px;
+  font-size: 16px;
+}
 
-/*.condition-button {*/
-/*  display: inline-block;*/
-/*  padding: 2px 5px; !* 최소한의 패딩으로 글씨 영역만큼만 색이 적용되도록 합니다 *!*/
-/*  border-radius: 3px;*/
-/*  color: #fff;*/
-/*  font-weight: bold;*/
-/*}*/
+.condition-button {
+  display: inline-block;
+  padding: 2px 5px; /* 최소한의 패딩으로 글씨 영역만큼만 색이 적용되도록 합니다 */
+  border-radius: 3px;
+  color: #fff;
+  font-weight: bold;
+}
 
-/*.condition-button.pending {*/
-/*  background-color: #ffcc00; !* Color for 승인대기 *!*/
-/*}*/
+.condition-button.pending {
+  background-color: #ffcc00; /* Color for 승인대기 */
+}
 
-/*.condition-button.approved {*/
-/*  background-color: #007bff; !* Color for 승인완료 *!*/
-/*}*/
+.condition-button.approved {
+  background-color: #007bff; /* Color for 승인완료 */
+}
 
-/*.condition-button.rejected {*/
-/*  background-color: #ff6285; !* Color for 승인거절 *!*/
-/*}*/
+.condition-button.rejected {
+  background-color: #ff6285; /* Color for 승인거절 */
+}
 
-/*.condition-button.inspection-pending {*/
-/*  background-color: #ffcc00; !* Color for 검수대기 *!*/
-/*}*/
+.condition-button.inspection-pending {
+  background-color: #ffcc00; /* Color for 검수대기 */
+}
 
-/*.condition-button.inspection-completed {*/
-/*  background-color: #45a049; !* Color for 검수완료 *!*/
-/*}*/
+.condition-button.inspection-completed {
+  background-color: #45a049; /* Color for 검수완료 */
+}
 
 /* 여기부턴 재현님꺼 */
   .container {
