--- a/src/assets/css/order.css
+++ b/src/assets/css/order.css
@@ -237,3 +237,30 @@
     margin: 0 10px;
     font-weight: bold;
   }
+
+
+  .breadcrumbs {
+    font-size: 16px;
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: left;
+    font-weight: bold;
+    padding: 10px;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .breadcrumbs span {
+    margin: 0 5px;
+  }
+  
+  .breadcrumbs a {
+    color: #000;
+    text-decoration: none;
+    font-weight: bolder;
+  }
+  
+  .breadcrumbs a:hover {
+    text-decoration: underline;
+  }
