--- a/src/assets/css/order.css
+++ b/src/assets/css/order.css
@@ -56,13 +56,14 @@
 /* 여기부턴 재현님꺼 */
   .container {
     position: relative;
-    min-height: 100vh; /* Ensure the container takes at least the full height of the viewport */
+    /*min-height: 100vh; !* Ensure the container takes at least the full height of the viewport *!*/
   }
 
   .filter-section {
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
+    padding-top: 3%;
   }
 
   .filter-table {
@@ -77,7 +78,7 @@
   .filter-table td {
     padding: 5px 10px;
     font-size: 16px;
-
+    height: 30px;
   }
 
   .filter-label {
@@ -207,6 +208,7 @@
   .allpost {
     text-align: center;
     padding: 10px 0;
+    height: 30px;
   }
 
   .allpost .num {
