--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -145,15 +145,7 @@
     resize: none;
     height: auto;
   }
-  
-  .popup-content button {
-    padding: 10px 20px;
-    background-color: #9d9d9d;
-    color: black;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
+
 
 
 
@@ -252,4 +244,20 @@
     min-width: 120px;
     max-width: 100px;
 
+  }
+
+
+  .ho-btn {
+    background-color: #D9D9D9;
+    color: black;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    padding: 8px 16px;
+    font-size: 14px;
+    font-weight: bold;
+  }
+  
+  .ho-btn:hover {
+    background-color: gray; 
   }
