--- a/src/assets/css/order.css
+++ b/src/assets/css/order.css
@@ -244,6 +244,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 10px;
+    padding-bottom: 150px;
   }
 
   .pagination button {
